prev and next button added

--- a/detail.html
+++ b/detail.html
@@ -44,6 +44,34 @@
             font-weight: bold;
             color: #007BFF;
         }
+
+        /* Add more styling to important features */
+        #movie-title {
+            font-size: 24px;
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-bottom: 10px;
+            color: #333;
+        }
+
+        .movie-info {
+            font-weight: bold;
+        }
+
+        #movie-imdb-rating {
+            font-size: 20px;
+            color: #007BFF;
+        }
+
+        #movie-poster {
+            transition: transform 0.2s ease-in-out;
+        }
+
+        #movie-poster:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
     </style>
 </head>
 <body>
