--- a/IMDB.html
+++ b/IMDB.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <div style="display: flex; align-content: center; align-items: center; flex-wrap: wrap; "><h2 style="margin-right: 30px;">OMDB Movies</h2>
+    <div style="display: flex; align-content: center; align-items: center; flex-wrap: wrap; "><h2 style="margin-right: 30px; color: black;">OMDB Movies</h2>
         <form action="IMDB.js" style="margin: 0px;">
             <label for="search">Search</label>
             <input id="search"  value=""></input>
@@ -17,7 +17,6 @@
     <div id="movielist" class="movielist">
     </div>
     <div id="pagination">
-        <!-- Pagination links will be dynamically generated here -->
     </div>
     <script src="IMDB.js"></script>
 </body>
